--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,6 @@
 	<classpathentry kind="lib" path="jars/slf4j-api-1.7.36.jar"/>
 	<classpathentry kind="lib" path="jars/SparseBitSet-1.2.jar"/>
 	<classpathentry kind="lib" path="jars/xmlbeans-5.1.1.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
